# qcodeplot3d

./: .gitignore  README.md  concatenated_decoder_magic_boundaries.py  pyproject.toml  requirements.txt  stabilizer_helpers.py
framework/: base.py  construction.py  decoder.py  plotter.py  stabilizers.py  util.py
framework/cc_2d/: __init__.py  construction.py
framework/cc_3d/: __init__.py  base.py  construction.py  plotter.py  util.py
framework/common/: construction.py  graph.py  stabilizers.py
src/framework/: gui.py
src/framework/cc_2d/: __init__.py  plotter.py
src/framework/cc_3d/: construction.py  plotter.py
src/framework/common/: construction.py  graph.py  plotter.py
src/qcodeplot3d/: gui.py
src/qcodeplot3d/cc_2d/: __init__.py  construction.py  plotter.py
src/qcodeplot3d/cc_3d/: __init__.py  construction.py  plotter.py
src/qcodeplot3d/common/: construction.py  graph.py  plotter.py  stabilizers.py
